compiler/testData/diagnostics/tests/redeclarations/ParentPackageRedeclaredByClass.fir.kt
// RUN_PIPELINE_TILL: SOURCE
// FILE: a.kt
package <!PACKAGE_CONFLICTS_WITH_CLASSIFIER!>a.b<!>

// FILE: b.kt
class a
